# vl53l7cx_library

./: CMakeLists.txt  LICENSE  README.md  idf_component.yml
.github/workflows/: ci.yml  publish.yml
examples/minimal_is_alive_start/: CMakeLists.txt
examples/minimal_is_alive_start/main/: idf_component.yml  main.c
include/: platform.h  vl53l7cx_api.h  vl53l7cx_buffers.h
src/: platform.c  vl53l7cx_api.c  vl53l7cx_buffers.c  vl53l7cx_plugin_motion_indicator.c  vl53l7cx_plugin_xtalk.c
